--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
         <nav class="navbar">
             <a href="#">Home</a>
             <a href="#">About</a>
-            <a lang="zh-Hans" href="#">中文</a>
+            <a href="#">More&More</a>
+            <a href="#">Contact</a>
         </nav>
     </header>
 </body>
